# takumi-http

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/dto/: animation.rs  measure.rs  mod.rs  render.rs
src/extractors/: json_or_form.rs  mod.rs
src/routes/: animation.rs  extract_urls.rs  health.rs  images.rs  measure.rs  mod.rs  render.rs
tests/: animation_test.rs  extract_urls_test.rs  health_test.rs  images_test.rs  measure_test.rs  render_test.rs
tests/common/: mod.rs
