[package]
name = "takumi-http"
version = "0.70.3"
edition = "2024"
license = "MIT"
description = "HTTP server for Takumi image rendering"
keywords = ["takumi", "image", "rendering", "server", "docker"]
categories = ["web-programming::http-server", "multimedia::images"]

[dependencies]
takumi = "0.70"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace", "request-id"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
walkdir = "2.5"
mimalloc = "0.1"

[profile.dev]
# Takumi's rendering requires more stack in debug builds
opt-level = 1

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum-test = "18"
http-body-util = "0.1"
image = "0.25"
